Change height value to auto to fix viewing on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
   margin: 0;
   box-sizing: border-box;
   font-size: 62.5%;
-  height: 100%;
+  height: auto;
 }
 
 body {
